--- a/app/src/main/res/layout/item_musicformlistview.xml
+++ b/app/src/main/res/layout/item_musicformlistview.xml
@@ -26,7 +26,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/itemMusicForm_Name_txt"
+                    android:id="@+id/itemMusicForm_first_txt"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:paddingLeft="5dp"
@@ -34,17 +34,27 @@
                     android:textSize="18dp" />
 
                 <TextView
-                    android:id="@+id/itemMusicForm_Num_txt"
+                    android:id="@+id/itemMusicForm_second_txt"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:padding="5dp"
+                    android:paddingTop="2dp"
+                    android:paddingLeft="5dp"
+                    android:paddingBottom="2dp"
                     android:text="0首歌曲"
-                    android:textSize="10dp" />
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:id="@+id/itemMusicForm_third_txt"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="5dp"
+                    android:text="0首歌曲"
+                    android:textSize="12dp" />
             </LinearLayout>
 
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/right" />
         </TableRow>
