--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -9,10 +9,38 @@
     android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
 
-    <com.designers.kuwo.utils.CircularImage
-        android:id="@+id/main_photo_imgview"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="8dp"/>
+    <TableLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:collapseColumns="3"
+        android:stretchColumns="1">
+
+        <TableRow>
+
+            <com.designers.kuwo.utils.CircularImage
+                android:id="@+id/main_photo_imgview"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginRight="15dp"/>
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="30dp"
+                android:gravity="center"
+                android:text="搜索歌曲丶歌手..."
+                android:textSize="12dp"
+                android:layout_marginTop="7dp"
+                android:background="@drawable/txt_shape"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:drawable/ic_menu_search"
+                android:layout_marginTop="7dp"
+                android:layout_marginRight="8dp"/>
+        </TableRow>
+    </TableLayout>
+
 
 </android.support.v7.widget.Toolbar>
