--- a/app/src/main/res/layout/main_item_musicformlistview.xml
+++ b/app/src/main/res/layout/main_item_musicformlistview.xml
@@ -53,10 +53,10 @@
             </LinearLayout>
 
             <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/right" />
+                android:src="@drawable/right1" />
         </TableRow>
     </TableLayout>
 </RelativeLayout>
