--- a/app/src/main/res/layout/main_playbar.xml
+++ b/app/src/main/res/layout/main_playbar.xml
@@ -10,7 +10,7 @@
     <View
         android:layout_width="fill_parent"
         android:layout_height="5dp"
-        android:background="#55bbbbbb"/>
+        android:background="@drawable/playbar_topline"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -21,10 +21,10 @@
         android:orientation="vertical"
         android:paddingLeft="58dp">
 
-        <SeekBar
+        <com.designers.kuwo.utils.MySeekBar
             android:layout_width="fill_parent"
             android:layout_height="20dp"
-            android:thumb="@drawable/thumbs" />
+            android:max="100"/>
 
         <TableLayout
             android:layout_width="fill_parent"
@@ -41,7 +41,8 @@
                     android:paddingLeft="5dp"
                     android:layout_marginBottom="2dp"
                     android:text="当-林俊杰"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:textColor="#000000"/>
 
                 <ImageButton
                     android:layout_width="35dp"
