--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -34,10 +34,10 @@
                 android:background="@drawable/txt_shape"/>
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:drawable/ic_menu_search"
-                android:layout_marginTop="7dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/search"
+                android:layout_marginTop="10dp"
                 android:layout_marginRight="8dp"/>
         </TableRow>
     </TableLayout>
