--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,7 +9,7 @@
     android:background="@drawable/line_shape"
     tools:context="com.designers.kuwo.activitys.Register">
     <LinearLayout
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="50dp"
         android:layout_width="fill_parent"
         android:gravity="center"
         android:orientation="vertical"
@@ -18,6 +18,7 @@
             android:id="@+id/tbLogin"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:collapseColumns="2"
             android:padding="20dp"
             android:stretchColumns="1" >
@@ -42,7 +43,7 @@
                     android:layout_marginLeft="6dp"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/edt_shape"
-                    android:hint="请输入账号"
+                    android:hint="@string/register_account_please"
                     android:textSize="13sp" />
             </TableRow>
 
@@ -65,10 +66,36 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginLeft="6dp"
                     android:layout_marginTop="10dp"
+                    android:password="true"
                     android:background="@drawable/edt_shape"
-                    android:hint="请输入密码"
+                    android:hint="@string/register_password_input"
                     android:textSize="13sp" />
             </TableRow>
+            <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" >
+
+                <TextView
+                    android:id="@+id/register_imgPasswords"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/personal_infor_set_password" />
+
+                <EditText
+                    android:id="@+id/register_edtPassword_second"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginTop="10dp"
+                    android:password="true"
+                    android:background="@drawable/edt_shape"
+                    android:hint="@string/register_password_second"
+                    android:textSize="13sp" />
+            </TableRow>
+
         </TableLayout>
         <Button
             android:id="@+id/register_Register"
@@ -76,10 +103,10 @@
             android:layout_height="25dp"
             android:layout_below="@id/btnLogin"
             android:layout_centerHorizontal="true"
-            android:layout_marginLeft="10dp"
+           android:gravity="center"
             android:layout_marginTop="10dp"
             android:background="@drawable/btn_reg_bg"
-            android:text="注册"
+            android:text="@string/register_register"
             android:textColor="#ffffff"
             android:textSize="15sp" />
     </LinearLayout>
