--- a/app/src/main/res/drawable/line_shape.xml
+++ b/app/src/main/res/drawable/line_shape.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-     <corners android:radius="10dp"/>
+     <corners android:radius="1dp"/>
     
-    <solid android:color="#55d2e9ff"/>
+    <solid android:color="#D3D3D3"/>
     
-    <stroke android:width="0.5dp" android:color="#55d2e9ff"/>
+    <stroke android:width="0.5dp" android:color="#D3D3D3"/>
 
 </shape>
