--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -84,6 +84,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/edt_shape"
                     android:hint="请输入密码"
+                    android:password="true"
                     android:textSize="13sp" />
             </TableRow>
         </TableLayout>
