--- a/app/src/main/res/layout/activity_music_sort.xml
+++ b/app/src/main/res/layout/activity_music_sort.xml
@@ -1,13 +1,20 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+    <include layout="@layout/meau_music_bar"/>
 
     <LinearLayout
         android:id="@+id/musicSortLinearLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="#ffffff"
+        android:background="@color/musicform_viewpager_color"
         android:orientation="horizontal"
         android:padding="10dp">
 
@@ -62,15 +69,14 @@
         android:layout_height="@dimen/main_line_height"
         android:layout_gravity="bottom"
         android:orientation="vertical"
-        android:background="#ffffff"
-        >
+        android:background="#ffffff">
 
         <ImageView
             android:id="@+id/cursor"
             android:layout_width="@dimen/main_matrix_width"
             android:layout_height="@dimen/main_line_height"
             android:scaleType="matrix"
-            android:background="@color/red" />
+            android:background="@color/colorPrimary" />
     </LinearLayout>
     <View
         android:layout_width="fill_parent"
@@ -88,3 +94,5 @@
         android:persistentDrawingCache="animation" />
 
 </LinearLayout>
+    <include layout="@layout/main_playbar"/>
+</RelativeLayout>
