--- a/app/src/main/res/layout/activity_personal_nake_set.xml
+++ b/app/src/main/res/layout/activity_personal_nake_set.xml
@@ -2,20 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
+
     <TextView
-             android:id="@+id/personal_title_set"
+        android:id="@+id/personal_title_set"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:gravity="center"
         android:textColor="@color/persinal_infor_color"
         android:textSize="16sp" />
-<EditText
-    android:id="@+id/personal_nake_input"
-    android:layout_width="200dp"
-    android:gravity="center"
-    android:layout_gravity="center"
- android:background="@drawable/edt_shape"
-    android:layout_height="wrap_content" />
+
+    <EditText
+        android:id="@+id/personal_nake_input"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/edt_shape"
+        android:gravity="center" />
 </LinearLayout>
