--- a/app/src/main/res/layout/fragment_single.xml
+++ b/app/src/main/res/layout/fragment_single.xml
@@ -1,17 +1,12 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.designers.kuwo.activitys.SingleFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <Button
-        android:id="@+id/btnSingle"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="ceshi"
-        />
     <ListView
         android:id="@+id/listViewSingle"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"></ListView>
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="57dp" />
 </FrameLayout>
