--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,10 +16,14 @@
     <color name="red">#FFFF1826</color>
     <color name="music_sort_txt_color">#141414</color>
     <color name="music_sort_basic_color">#FFFFFF</color>
+    <color name="music_sort_hide_bg">#8daac3</color>
     <color name="personal_infor_set_signature">#E492C3</color>
     <color name="persinal_infor_color">#1296db</color>
     <color name="textcolor_white">#ffffff</color>
     <color name="textcolor_black">#000000</color>
     <color name="textcolor_white1">#F7F7F7</color>
     <color name="musicform_toolbar_color">#8A8A8A</color>
+    <color name="musicform_viewpager_color">#ffffff</color>
+    <color name="musicform_listitem_color1">#208A8A8A</color>
+    <color name="musicform_listitem_color2">#508A8A8A</color>
 </resources>
