--- a/app/src/main/res/layout/music_album_page.xml
+++ b/app/src/main/res/layout/music_album_page.xml
@@ -1,4 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -80,5 +82,7 @@
         android:id="@+id/listViewAlbumSong"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp" />
+        android:layout_marginBottom="55dp" />
 </LinearLayout>
+    <include layout="@layout/main_playbar"/>
+    </RelativeLayout>
