--- a/app/src/main/res/layout/activity_personal_nake_set.xml
+++ b/app/src/main/res/layout/activity_personal_nake_set.xml
@@ -18,5 +18,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@drawable/edt_shape"
-        android:gravity="center" />
+        android:gravity="center"
+        android:layout_marginBottom="20dp"/>
 </LinearLayout>
