--- a/app/src/main/res/layout/activity_recent.xml
+++ b/app/src/main/res/layout/activity_recent.xml
@@ -16,8 +16,9 @@
             android:id="@+id/music_listview"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="62dp"
-            android:layout_marginTop="72dp"/>
+            android:layout_marginBottom="55dp"
+            android:layout_marginTop="72dp"
+            android:background="@color/theme_color"/>
 
         <include layout="@layout/main_playbar" />
     </RelativeLayout>
