--- a/app/src/main/res/layout/activity_single_like.xml
+++ b/app/src/main/res/layout/activity_single_like.xml
@@ -79,7 +79,8 @@
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/search_line"
-            android:layout_marginBottom="62dp" />
+            android:layout_marginBottom="55dp"
+            android:background="@color/theme_color"/>
 
         <include layout="@layout/main_playbar" />
     </RelativeLayout>
