--- a/app/src/main/res/layout/fragment_singer.xml
+++ b/app/src/main/res/layout/fragment_singer.xml
@@ -5,34 +5,36 @@
     android:background="@color/music_sort_basic_color"
     tools:context="com.designers.kuwo.activitys.SingerFragment">
 
-    <ListView
-        android:id="@+id/listViewSinger"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="58dp" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/float_letter"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_gravity="center"
-        android:background="@color/music_sort_hide_bg"
-        android:gravity="center"
-        android:textSize="40sp"
-        android:visibility="gone" />
+        <ListView
+            android:id="@+id/listViewSinger"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="58dp"
+            android:background="@color/musicform_listitem_color1"/>
 
-    <!--<com.designers.kuwo.utils.SlideBar
-        android:id="@+id/sliderBar"
-        android:layout_width="30dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|bottom"/>-->
-    <LinearLayout
-        android:id="@+id/sliderBar2"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_gravity="right"
-        android:background="#d7d7d7"
-        android:gravity="center"
-        android:orientation="vertical" />
+        <TextView
+            android:id="@+id/tv_word"
+            android:layout_centerInParent="true"
+            android:textSize="30sp"
+            android:gravity="center"
+            android:textColor="#FFFFFF"
+            android:background="#44000000"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:text="A" />
 
+
+        <com.designers.kuwo.utils.IndexView
+            android:id="@+id/iv_words"
+            android:layout_width="26dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:background="@color/musicsort_indexview_color"
+            android:layout_marginBottom="62dp"
+            android:layout_marginTop="0dp"/>
+    </RelativeLayout>
 </FrameLayout>
