--- a/app/src/main/res/layout/item_singer.xml
+++ b/app/src/main/res/layout/item_singer.xml
@@ -2,7 +2,18 @@
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
-    android:orientation="horizontal">
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/tv_word"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#44000000"
+        android:text="A"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:visibility="gone"
+        android:paddingLeft="5dp"/>
 
     <LinearLayout
         android:id="@+id/itemLinearLayout"
