--- a/app/src/main/res/layout/main_above_tablayout.xml
+++ b/app/src/main/res/layout/main_above_tablayout.xml
@@ -33,21 +33,46 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <com.designers.kuwo.utils.CircularImage
+                <ImageView
                     android:id="@+id/main_music_imgview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
+                    android:layout_width="33dp"
+                    android:layout_height="33dp"
+                    android:layout_marginTop="12dp"
                     android:scaleType="fitXY" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="5dp"
+                    android:padding="6dp"
                     android:text="单曲"
                     android:textColor="@color/textcolor_white1"
                     android:textSize="@dimen/textsize_18" />
             </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/main_musicform_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/main_musicform_imgview"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="12dp"
+                    android:scaleType="fitXY" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="6dp"
+                    android:text="歌单"
+                    android:textColor="@color/textcolor_white1"
+                    android:textSize="@dimen/textsize_18" />
+            </LinearLayout>
+
 
             <LinearLayout
                 android:id="@+id/main_like_btn"
@@ -57,17 +82,17 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <com.designers.kuwo.utils.CircularImage
+                <ImageView
                     android:id="@+id/main_like_imgview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
+                    android:layout_width="33dp"
+                    android:layout_height="33dp"
+                    android:layout_marginTop="12dp"
                     android:scaleType="fitXY" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="5dp"
+                    android:padding="6dp"
                     android:text="我喜欢"
                     android:textColor="@color/textcolor_white1"
                     android:textSize="@dimen/textsize_18" />
@@ -81,17 +106,17 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <com.designers.kuwo.utils.CircularImage
+                <ImageView
                     android:id="@+id/main_recent_imgview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
+                    android:layout_width="33dp"
+                    android:layout_height="33dp"
+                    android:layout_marginTop="12dp"
                     android:scaleType="fitXY" />l
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="5dp"
+                    android:padding="6dp"
                     android:text="最近"
                     android:textColor="@color/textcolor_white1"
                     android:textSize="@dimen/textsize_18" />
@@ -114,7 +139,9 @@
                 android:background="#55000000" />
 
 
-            <TableRow android:gravity="center">
+            <TableRow
+                android:id="@+id/localMusic"
+                android:gravity="center">
 
                 <ImageView
                     android:layout_width="25dp"
@@ -125,12 +152,12 @@
                 <TextView
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
+                    android:paddingBottom="15dp"
                     android:paddingLeft="8dp"
-                    android:paddingTop="7dp"
+                    android:paddingTop="13dp"
                     android:text="本地音乐"
                     android:textColor="@color/textcolor_white1"
-                    android:textSize="@dimen/textsize_18" />
+                    android:textSize="@dimen/textsize_20" />
 
                 <TextView
                     android:layout_width="wrap_content"
