--- a/app/src/main/res/layout/music_bottom_dialog.xml
+++ b/app/src/main/res/layout/music_bottom_dialog.xml
@@ -41,6 +41,7 @@
             android:background="@drawable/checkall" />
 
         <TextView
+            android:id="@+id/select_txt"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
