--- a/app/src/main/res/layout/musicform_music_item_layout.xml
+++ b/app/src/main/res/layout/musicform_music_item_layout.xml
@@ -34,7 +34,8 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft="5dp"
                     android:text="我的歌单"
-                    android:textSize="18dp" />
+                    android:textSize="@dimen/textsize_18"
+                    android:textColor="@color/textcolor_black"/>
 
                 <TextView
                     android:id="@+id/itemMusic_songer_txt"
@@ -44,7 +45,7 @@
                     android:paddingLeft="5dp"
                     android:paddingTop="5dp"
                     android:text="周杰伦"
-                    android:textSize="12dp" />
+                    android:textSize="@dimen/textsize_12" />
 
             </LinearLayout>
 
